--- a/simple-http/staging/pod998/deployment.yaml
+++ b/simple-http/staging/pod998/deployment.yaml
@@ -20,10 +20,17 @@ spec:
           envFrom:
             - configMapRef:
                 name: simple-http
+            - secretRef:
+                name: simple-http
           resources:
             limits:
               memory: 128M
               cpu: 1000m
+          startupProbe:
+            initialDelaySeconds: 7
+            httpGet:
+              path: /
+              port: http
           ports:
             - name: http
               containerPort: 80
