--- a/yet-another-http-server/staging/pod998/deployment.yaml
+++ b/yet-another-http-server/staging/pod998/deployment.yaml
@@ -28,9 +28,12 @@ spec:
               cpu: 1000m
           startupProbe:
             initialDelaySeconds: 2
-            httpGet:
-              path: /
-              port: http
+            failureThreshold: 1
+            timeoutSeconds: 10
+            exec:
+              command:
+                - "sleep"
+                - "30"
           ports:
             - name: http
               containerPort: 80
