add sync-wave to configmap to test

--- a/yet-another-http-server/staging/pod998/config.yaml
+++ b/yet-another-http-server/staging/pod998/config.yaml
@@ -1,6 +1,8 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
+  annotations:
+    argocd.argoproj.io/sync-wave: "5"
   name: simple-http
 data:
   URL: https://www.google.com
