--- a/simple-http/staging/pod998/deployment.yaml
+++ b/simple-http/staging/pod998/deployment.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: simple-http
     spec:
+      revisionHistoryLimit: 0
       containers:
         - name: simple-http
           image: httpd
