--- a/simple-http/staging/pod998/deployment.yaml
+++ b/simple-http/staging/pod998/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     metadata:
       labels:
         app: simple-http
-        sidecar.istio.io/inject: "true"
+        sidecar.istio.io/inject: "false"
     spec:
       containers:
         - name: simple-http
