--- a/argocd/install.yaml
+++ b/argocd/install.yaml
@@ -22005,6 +22005,8 @@ metadata:
     app.kubernetes.io/name: argocd-cm
     app.kubernetes.io/part-of: argocd
   name: argocd-cm
+data:
+  timeout.reconciliation.jitter: 120
 ---
 apiVersion: v1
 kind: ConfigMap
