--- a/argocd/install.yaml
+++ b/argocd/install.yaml
@@ -22006,7 +22006,7 @@ metadata:
     app.kubernetes.io/part-of: argocd
   name: argocd-cm
 data:
-  timeout.reconciliation.jitter: 120
+  timeout.reconciliation.jitter: 120s
 ---
 apiVersion: v1
 kind: ConfigMap
