--- a/simple-http/staging/pod998/deployment.yaml
+++ b/simple-http/staging/pod998/deployment.yaml
@@ -4,9 +4,10 @@ metadata:
   name: simple-http
   labels:
     foo: bar
+    app.kubernetes.io/name: simple-http
 spec:
-  replicas: 2
-  revisionHistoryLimit: 0
+  replicas: 1
+  revisionHistoryLimit: 1
   selector:
     matchLabels:
       app: simple-http
@@ -14,6 +15,7 @@ spec:
     metadata:
       labels:
         app: simple-http
+        app.kubernetes.io/name: simple-http
         sidecar.istio.io/inject: "false"
     spec:
       containers:
