--- a/simple-http/staging/pod998/service.yaml
+++ b/simple-http/staging/pod998/service.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   type: ClusterIP
   selector:
-    app: simple-http
+    app.kubernetes.io/name: simple-http
   ports:
     - port: 80
       targetPort: 80
