fix startup probe

--- a/simple-http/staging/pod998/deployment.yaml
+++ b/simple-http/staging/pod998/deployment.yaml
@@ -34,13 +34,9 @@ spec:
             initialDelaySeconds: 4
             failureThreshold: 2
             timeoutSeconds: 5
-            exec:
-              command:
-                - sleep
-                - "60"
-            # httpGet:
-            #   path: /
-            #   port: http
+            httpGet:
+              path: /
+              port: http
           ports:
             - name: http
               containerPort: 80
