--- a/simple-http/staging/pod998/config.yaml
+++ b/simple-http/staging/pod998/config.yaml
@@ -2,6 +2,9 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: simple-http
+  labels:
+    app.kubernetes.io/name: simple-http
+    app.kubernetes.io/managed-by: argocd
 data:
   URL: https://www.google.com
   USER: steve
