--- a/simple-http/staging/pod998/deployment.yaml
+++ b/simple-http/staging/pod998/deployment.yaml
@@ -5,6 +5,7 @@ metadata:
   labels:
     app.kubernetes.io/name: simple-http
     app.kubernetes.io/component: api-server
+    app.kubernetes.io/managed-by: argocd
 spec:
   replicas: 2
   revisionHistoryLimit: 0
@@ -17,6 +18,7 @@ spec:
         app: simple-http
         app.kubernetes.io/name: simple-http
         app.kubernetes.io/component: api-server
+        app.kubernetes.io/managed-by: argocd
         sidecar.istio.io/inject: "false"
     spec:
       containers:
@@ -30,7 +32,7 @@ spec:
           resources:
             limits:
               memory: 128M
-              cpu: 1000m
+              cpu: "1"
           startupProbe:
             initialDelaySeconds: 4
             failureThreshold: 2
