--- a/simple-http/staging/pod998/secret.yaml
+++ b/simple-http/staging/pod998/secret.yaml
@@ -2,6 +2,9 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: simple-http
+  labels:
+    app.kubernetes.io/name: simple-http
+    app.kubernetes.io/managed-by: argocd
 type: Opaque
 data:
   PASSWORD: aXRzQUJpZ1NlY3IzVA==
