--- a/simple-http/staging/pod998/service.yaml
+++ b/simple-http/staging/pod998/service.yaml
@@ -2,6 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: simple-http
+  labels:
+    app.kubernetes.io/name: simple-http
+    app.kubernetes.io/managed-by: argocd
 spec:
   type: ClusterIP
   selector:
