--- a/simple-http/staging/pod998/deployment.yaml
+++ b/simple-http/staging/pod998/deployment.yaml
@@ -7,7 +7,7 @@ metadata:
     app.kubernetes.io/component: api-server
     app.kubernetes.io/managed-by: argocd
 spec:
-  replicas: 3
+  replicas: 2
   revisionHistoryLimit: 0
   selector:
     matchLabels:
@@ -18,7 +18,7 @@ spec:
         app.kubernetes.io/name: simple-http
         app.kubernetes.io/component: api-server
         app.kubernetes.io/managed-by: argocd
-        sidecar.istio.io/inject: "true"
+        sidecar.istio.io/inject: "false"
     spec:
       containers:
         - name: simple-http
